2002-09-08  David N. Welton  <davidw@dedasys.com>

	* src/TclWebapache.c: Fix up ObjSetVar2 use.

	* src/mod_rivet.c: Fix up another instance of ObjSetVar2.

2002-09-07  David N. Welton  <davidw@dedasys.com>

	* src/mod_rivet.c (Rivet_PropagatePerDirConfArrays): Do the right
	tricks with IncrRefCount and DecrRefCount to stop the leak.

2002-08-03  David N. Welton  <davidw@dedasys.com>

	* src/mod_rivet.c (Rivet_AppendToScript): Changed before, after,
	and error scripts back to plain old ascii, in order to plug a
	memory leak.

	* src/mod_rivet.h: New macro: FILEDEBUGINFO off by default.
	Useful for debugging the order of functions called.

2002-07-28  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xsl: Updated rivet.xsl from Websh's xsl.

2002-07-21  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: Several new sections.  We now have most of what
	is in the HTML documents.

2002-07-19  David N. Welton  <davidw@dedasys.com>

	* src/buildscripts/aardvark.tcl (aardvark::runbuildcommand):
	Attempt to use 'open' to execute shell commands, in order to both
	catch the output as well as the return code.

	* doc/rivet.xml: New file.  Removed directives.xml in favor of
	this, which we will use to build individual HTML files and other
	forms of documentation.

2002-07-18  David N. Welton  <davidw@dedasys.com>

	* src/rivetCore.c (Rivet_Upload): Changed format of 'upload'
	command to be more like 'var'.  Changed relevant tests.

2002-07-14  David N. Welton  <davidw@dedasys.com>

	* doc/directives.xml: New file - XML version of directives.html.

2002-07-12  David N. Welton  <davidw@dedasys.com>

	* src/buildscripts/aardvark.tcl (aardvark::runbuildcommand):
	Updated functionality to hopefully better handle errors, warnings,
	and output.

	* src/make.tcl: Created a 'dist' target which rolls a tarball.

2002-07-11  David N. Welton  <davidw@dedasys.com>

	* src/TclWebapache.c (TclWeb_GetHeaderVars): New function to get